--- a/styles.css
+++ b/styles.css
@@ -45,10 +45,13 @@
     align-items: center;
     justify-content: space-evenly;
     gap: 10px;
+    
 }
 
 .title{
     margin-top: 30px;
+    text-align: center;
+    text-overflow: ellipsis;
 }
 .book:hover{
     box-shadow: 4px 4px 4px 2px rgba(59, 129, 199,0.5);
@@ -56,7 +59,7 @@
 
 
 /* From https://getcssscan.com/css-buttons-examples */
-.haveRead button {
+.haveRead {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -74,11 +77,37 @@
   touch-action: manipulation;
 }
 
-.haveRead button:hover {
-    box-shadow: 0px 0.5px 1.5px rgba(59, 199, 87, 0.5), inset 0px 0.8px 0px -0.25px rgba(59, 199, 87, 0.5);
-    background-color: rgb(59, 199, 87);
-  
+.haveRead:hover {
+    box-shadow: 0px 0.5px 1.5px rgba(199, 190, 59, 0.5), inset 0px 0.8px 0px -0.25px rgba(59, 199, 87, 0.5);
+    background-color: rgb(199, 106, 59);
+    transition: 0.5s;
 }
+
+.haveNotRead  {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 6px 14px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Roboto', sans-serif;
+    border-radius: 6px;
+    border: none;
+  
+    color: #fff;
+    background: rgb(199, 59, 59);;
+     background-origin: border-box;
+    box-shadow: 0px 0.5px 1.5px rgba(246, 54, 54, 0.25), inset 0px 0.8px 0px -0.25px rgba(255, 255, 255, 0.2);
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+
+  }
+  
+  .haveNotRead:hover {
+      box-shadow: 0px 0.5px 1.5px rgba(59, 199, 87, 0.5), inset 0px 0.8px 0px -0.25px rgba(59, 199, 87, 0.5);
+      background-color: rgb(59, 199, 87);
+      transition: 0.5s;
+  }
+
 
 
 .newBookButton{
